# game-of-life

./: .clang-format  CMakeLists.txt  GridViewer.cpp  GridViewer.h  LLCellularAutomaton.cpp  LLCellularAutomaton.h  Makefile  Vector2D.h  Window.cpp  Window.h  main.cpp  utils.h
src/: GridViewer.cpp  GridViewer.h  LLCellularAutomaton.cpp  LLCellularAutomaton.h  Vector2D.h  Window.cpp  Window.h  main.cpp  utils.h
